# RpStudio-master

./: .gitmodules  ACP.sh
back/: init_poetry.sh  launch_app.sh
back/RpStudio/: main.py  pyproject.toml
front/: lazy_install_and_run.sh
